src/test/ui/did_you_mean/bad-assoc-ty.stderr
error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:11:10
   |
LL | type A = [u8; 4]::AssocTy;
   |          ^^^^^^^^^^^^^^^^ help: try: `<[u8; 4]>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:15:10
   |
LL | type B = [u8]::AssocTy;
   |          ^^^^^^^^^^^^^ help: try: `<[u8]>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:19:10
   |
LL | type C = (u8)::AssocTy;
   |          ^^^^^^^^^^^^^ help: try: `<(u8)>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:23:10
   |
LL | type D = (u8, u8)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^ help: try: `<(u8, u8)>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:27:10
   |
LL | type E = _::AssocTy;
   |          ^^^^^^^^^^ help: try: `<_>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:31:19
   |
LL | type F = &'static (u8)::AssocTy;
   |                   ^^^^^^^^^^^^^ help: try: `<(u8)>::AssocTy`

error: missing angle brackets in associated item path
  --> $DIR/bad-assoc-ty.rs:37:10
   |
LL | type G = 'static + (Send)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ help: try: `<'static + Send>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:11:10
   |
LL | type A = [u8; 4]::AssocTy;
   |          ^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<[u8; _] as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:15:10
   |
LL | type B = [u8]::AssocTy;
   |          ^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<[u8] as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:19:10
   |
LL | type C = (u8)::AssocTy;
   |          ^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<u8 as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:23:10
   |
LL | type D = (u8, u8)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<(u8, u8) as Trait>::AssocTy`

error[E0121]: the type placeholder `_` is not allowed within types on item signatures
  --> $DIR/bad-assoc-ty.rs:27:10
   |
LL | type E = _::AssocTy;
   |          ^ not allowed in type signatures

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:31:19
   |
LL | type F = &'static (u8)::AssocTy;
   |                   ^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<u8 as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:37:10
   |
LL | type G = 'static + (Send)::AssocTy;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<std::marker::Send + 'static as Trait>::AssocTy`

error[E0223]: ambiguous associated type
  --> $DIR/bad-assoc-ty.rs:43:10
   |
LL | type H = Fn(u8) -> (u8)::Output;
   |          ^^^^^^^^^^^^^^^^^^^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<std::ops::Fn(u8) -> u8 + 'static as Trait>::Output`

error: aborting due to 15 previous errors

Some errors occurred: E0121, E0223.
For more information about an error, try `rustc --explain E0121`.
